syntax = "proto3";

import "google/protobuf/empty.proto";

package common.grpc.common;

option java_multiple_files = true;

service LoyaltyService {

  rpc accumulatePoints(PurchaseRequest) returns (PointsResponse);

  rpc redeemPoints(PurchaseRequest) returns (PointsResponse);

}

message PurchaseRequest {
  uint64 idCustomer = 1;
  double dollar = 2;
  uint32 points = 3;
  string movementDate = 4; // use a text string such as 2007-12-03T10:15:30
}

message PointsResponse {
  uint32 points = 1;
  double dollar = 2;
  string type = 3;
}